# HandRecognition

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.ipynb  preprocess.cpp
Report/: notes.aux  notes.fdb_latexmk  notes.fls  notes.tex  notes.toc  struct.tex
dataset/: dataset.tar.xz
include/: MeanShift.h  common.h  dataset.h  evaluation.h  meanshift.h  preprocess.h  sample.h  segmentation.h  utils.h
lib/preprocess/: CMakeLists.txt
lib/preprocess/src/: preprocess.cpp
python/: CNNClass.py  YOLO.py  datasetMine.ipynb  main.ipynb  main.py  train.py
python/model/: keras_metadata.pb  saved_model.pb
src/: MeanShift.cpp  dataset.cpp  evaluation.cpp  main.cpp  meanshift.cpp  preprocess.cpp  sample.cpp  segmentation.cpp
